-Fixed layout issues in certain screens -Fixed conditions on group import were not imported correctly under certain circumstances -Fixed minor HTML issues
git-svn-id: file:///Users/Shitiz/Downloads/lssvn/source/limesurvey@5363 b72ed6b6-b9f8-46b5-92b4-906544132732

--- a/admin/styles/default/adminstyle-rtl.css
+++ b/admin/styles/default/adminstyle-rtl.css
@@ -511,3 +511,11 @@ form.token select,form.token input {
 margin-top:1.5em;
 float:right;
 }
+table.alertbox {
+  width: 450px;
+  margin-left:auto; 
+  margin-right:auto;
+  border: 1px solid;
+  border-color: #D2E0F2 #8195BA #8195BA #D2E0F2;
+ text-align: right;  
+}
