--- a/admin/styles/default/adminstyle.css
+++ b/admin/styles/default/adminstyle.css
@@ -428,3 +428,11 @@ form.token select, form.token input {
 	margin-top: 1.5em;
 	float: left;
 }
+table.alertbox {
+  width: 450px;
+  margin-left:auto; 
+  margin-right:auto;
+  border: 1px solid;
+  border-color: #D2E0F2 #8195BA #8195BA #D2E0F2;
+ text-align: left;  
+}
